cambio en la portada

--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
 
     <div class="jumbotron">
         <h1 class="display-3">Jumbotron heading</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-            condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p class="lead"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Pariatur ipsam nam similique explicabo fugiat! Similique explicabo 
+            blanditiis nihil aliquam fugiat eligendi ad iste minima, perspiciatis 
+            quisquam hic aliquid id fuga?Voluptatem, autem nulla ut debitis necessitatibus 
+            optio unde distinctio! Cum placeat perspiciatis autem modi obcaecati voluptate rem. 
+            Error at sint cum adipisci dolore nostrum cupiditate, porro ut itaque, optio voluptatum. 
+        </p>
         <p>
             <a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a>
         </p>
@@ -66,7 +71,7 @@
     </div>
 
     <footer class="footer">
-        <p>&copy; Company 2017</p>
+        <p>&copy; TwomgDesigns 2017</p>
     </footer>
 
 </div>
