Video 5 - tutorial de Git por Makigas

--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
 
     <div class="jumbotron">
         <h1 class="display-3">Jumbotron heading</h1>
-        <p class="lead"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Pariatur ipsam nam similique explicabo fugiat! Similique explicabo 
-            blanditiis nihil aliquam fugiat eligendi ad iste minima, perspiciatis 
-            quisquam hic aliquid id fuga?Voluptatem, autem nulla ut debitis necessitatibus 
-            optio unde distinctio! Cum placeat perspiciatis autem modi obcaecati voluptate rem. 
-            Error at sint cum adipisci dolore nostrum cupiditate, porro ut itaque, optio voluptatum. 
+        <p class="lead"> Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Pariatur ipsam nam similique explicabo fugiat! Similique explicabo
+            blanditiis nihil aliquam fugiat eligendi ad iste minima, perspiciatis
+            quisquam hic aliquid id fuga?Voluptatem, autem nulla ut debitis necessitatibus
+            optio unde distinctio! Cum placeat perspiciatis autem modi obcaecati voluptate rem.
+            Error at sint cum adipisci dolore nostrum cupiditate, porro ut itaque, optio voluptatum.
+        </p>
+        <p class="lead">
+        	Estamos a punto de abrir la pagina al publico genral, vuelve pronto...
         </p>
         <p>
             <a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a>
