Video 6 - tutorial de Git Makigas

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             Error at sint cum adipisci dolore nostrum cupiditate, porro ut itaque, optio voluptatum.
         </p>
         <p class="lead">
-        	Estamos a punto de abrir la pagina al publico genral, vuelve pronto...
+        	Estamos a punto de abrir la pagina al publico genral, vuelve pronto (Video 6)...
         </p>
         <p>
             <a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a>
